# hiretrack

./: .gitignore  README.md  et --hard 1bee2a0
backend/: .gitignore  .vercelignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: job.py  resume.py  user.py
backend/app/routes/: ai.py  auth.py  dashboard.py  job.py  login.py  resume.py
backend/app/schemas/: dashboard_schema.py  job_schema.py  resume_schema.py  token_schema.py  user_schema.py
backend/app/services/: ai_service.py
backend/app/utils/: dependencies.py  security.py
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  PageTransition.jsx  ProtectedRoute.jsx
frontend/src/components/dashboard/: ActivityChart.jsx
frontend/src/components/jobs/: AnswerSandbox.jsx  CoverLetterDocument.jsx  MatchScoreCircle.jsx  QuestionAccordionItem.jsx
frontend/src/components/ui/: alert-dialog.jsx  button.jsx  card.jsx  dropdown-menu.jsx  input.jsx  label.jsx  select.jsx  sonner.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/dashboard/: MainLayout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/pages/auth/: LoginPage.jsx  RegisterPage.jsx
frontend/src/pages/dashboard/: DashboardPage.jsx  ResumePage.jsx
frontend/src/pages/jobs/: JobsPage.jsx  (+3 more)
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: aiService.js  api.js  authService.js  jobService.js  resumeService.js
screenshots/: desktop.ini
(+1 files in other folders)
