[project]
name = "hiretrack-backend"
version = "0.1.0"
description = "HireTrack FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.1",
  "pydantic==2.13.3",
  "SQLAlchemy==2.0.49",
  "psycopg2-binary==2.9.12",
  "python-dotenv==1.2.2",
  "python-jose[cryptography]==3.5.0",
  "python-multipart==0.0.28",
  "bcrypt==5.0.0",
  "passlib==1.7.4",
  "email-validator==2.3.0",
  "pypdf==5.4.0",
  "httpx==0.28.1",
]

[tool.vercel]
entrypoint = "app.main:app"
